--- a/index.html
+++ b/index.html
@@ -22,13 +22,17 @@
 		<p class="scroll">Scroll Down for Projects!</p>
 	</div>
 	<div class="projects">
-		<div class="one half"></div>
-		<div class="two half"></div>
-		<div class="three half"></div>
-		<div class="four half"></div>
-		<div class="five half"></div>
-		<div class="six half"></div>
-		<div class="seven half"></div>
+		<a href="https://himanshuc3.github.io/projects101"><div class="one half"></div></a>
+		<a href="https://himanshuc3.github.io/multicolor" target = "_blank"><div class="two half"></div></a>
+		<a href="https://himanshuc3.github.io/hangman" target = "_blank"><div class="three half"></div></a>
+		<a href="https://himanshuc3.github.io/madlibs" target = "_blank"><div class="four half"></div></a>
+		<a href="https://himanshuc3.github.io/tribute" target = "_blank"><div class="five half"></div></a>
+		<a href="https://himanshuc3.github.io/css-transitions" target = "_blank"><div class="six half"></div></a>
+		<a href="https://himanshuc3.github.io/todolist" target = "_blank"><div class="seven half"></div></a>
+		<a href="https://himanshuc3.github.io/Calc" target = "_blank"><div class="eight half"></div></a>
+		<a href="https://himanshuc3.github.io/Quotes-design" target = "_blank"><div class="nine half"></div></a>
+		<a href="https://himanshuc3.github.io/RockPaperScissors" target = "_blank"><div class="ten half"></div></a>
+		<a href="https://himanshuc3.github.io/quiz-stop" target = "_blank"><div class="eleven half"></div></a>
 	</div>
 	<div class="belowproject"><h1>Contact.</h1></div>
 	<div class="sites">
