--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 	<div class="belowproject"><h1>Contact.</h1></div>
 	<div class="sites">
 		<ul>
-			<li><span class="google">Google+</span></li>
-			<li><span class="github">Github</span></li>
-			<li><span class="linkedin">Linkedin</span></li>
+			<a href="https://plus.google.com/u/0/+HimanshuChhabraconfidential"><li><span class="google">Google+</span></li></a>
+			<a href="https://github.com/himanshuc3"><li><span class="github">Github</span></li></a>
+			<a href="https://www.linkedin.com/in/himanshu-chhabra-254795119/"><li><span class="linkedin">Linkedin</span></li></a>
 		</ul>
 	</div>
 	<div class="mail">
