--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 	<div class="belowproject"><h1>Contact.</h1></div>
 	<div class="sites">
 		<ul>
-			<li><a href="https://plus.google.com/u/0/+HimanshuChhabraconfidential"><span class="google">Google+</span></a></li>
-			<li><a href="https://github.com/himanshuc3"><span class="github">Github</span></a></li>
-			<li><a href="https://www.linkedin.com/in/himanshu-chhabra-254795119/"><span class="linkedin">Linkedin</span></a></li>
+			<li><a href="https://plus.google.com/u/0/+HimanshuChhabraconfidential" target="_blank"><span class="google">Google+</span></a></li>
+			<li><a href="https://github.com/himanshuc3"><span class="github" target="_blank">Github</span></a></li>
+			<li><a href="https://www.linkedin.com/in/himanshu-chhabra-254795119/" target="_blank"><span class="linkedin">Linkedin</span></a></li>
 		</ul>
 	</div>
 	<div class="mail">
