--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div class="sites">
 		<ul>
 			<li><a href="https://plus.google.com/u/0/+HimanshuChhabraconfidential" target="_blank"><span class="google">Google+</span></a></li>
-			<li><a href="https://github.com/himanshuc3"><span class="github" target="_blank">Github</span></a></li>
+			<li><a href="https://github.com/himanshuc3" target="_blank"><span class="github" >Github</span></a></li>
 			<li><a href="https://www.linkedin.com/in/himanshu-chhabra-254795119/" target="_blank"><span class="linkedin">Linkedin</span></a></li>
 		</ul>
 	</div>
