--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<div class="head">
-		<p class="portfoliolink">Himanshu Chhabra <span class="blog">Blog</span>	</p>
+		<p class="portfoliolink"><a href="https::/himanshuc3.github.io" target="_blank">Himanshu Chhabra</a> <span class="blog">Blog</span>	</p>
 		<h1 class="content">Hey there! Welcome to the project. Inspired by <span class="intext">#100daysofcode</span> and <span class="intext">Jennifer Dewalt</span>, I created this project to create fun web-apps and learn.</h1>
 		<p class="scroll">Scroll Down for Projects!</p>
 	</div>
